@@ -3,9 +3,16 @@
  */
 
 #ifdef HAVE_CONFIG_H
-#include "config.h"
-#endif
+# ifndef _MSC_VER
+#  include "config.h"
+# else
+#  include "config_msvc.h"
+# endif /* _MSC_VER */
+#endif /* HAVE_CONFIG_H */
 
+#if defined(_MSC_VER) || defined(__MINGW32__)
+# define _CRT_SECURE_NO_WARNINGS 1
+#endif
 
 
 #if defined (__GLIBC__) && defined(__LCLINT__)
@@ -54,11 +61,22 @@ char *alloca ();
 #include <unistd.h>
 #endif
 
+
+#if !defined(__GNUC__) && !defined(__attribute__)
+#define __attribute__(x)
+#endif
+#define UNUSED(x) x __attribute__((__unused__))
+
+
 #ifdef _MSC_VER
 #  define inline __inline
-#define _CRT_SECURE_NO_WARNINGS 1
+#endif
+
+
+#if defined(_MSC_VER) || defined(__MINGW32__)
 #include <io.h>
 #include <malloc.h>
+#include <process.h>
 #define F_OK 0
 #define R_OK 4
 #define W_OK 2
@@ -107,20 +125,26 @@ typedef int ssize_t;
 #define open _open
 #define close _close
 #define lseek _lseek
+#define execvp _execvp
 
 /* Pretend to be root to replace these */
-inline int setuid(int x) { return 1; }
-inline int getuid(void) { return 0; }
+static inline int setuid(UNUSED(int x)) { return 1; }
 
-inline int seteuid(int x) { return 1; }
-inline int geteuid(void) { return 0; }
+static inline int getuid(void) { return 0; }
 
-inline int setgid(int x) { return 1; }
-inline int getgid(void) { return 0; }
+static inline int seteuid(UNUSED(int x)) { return 1; }
+static inline int geteuid(void) { return 0; }
 
-inline int setegid(int x) { return 1; }
+static inline int setgid(UNUSED(int x)) { return 1; }
+static inline int getgid(void) { return 0; }
 
-#endif /* _MSC_VER */
+static inline int setegid(UNUSED(int x)) { return 1; }
+
+
+#else
+
+
+#endif /* defined(_MSC_VER) || defined(__MINGW32__) */
 
 #ifdef __NeXT
 /* access macros are not declared in non posix mode in unistd.h -
@@ -178,16 +202,17 @@ static inline char * stpcpy (char *dest, const char * src) {
 #define	xstrdup(_str)	strdup(_str)
 #endif  /* defined(HAVE_MCHECK_H) && defined(__GNUC__) */
 
-#if defined(HAVE___SECURE_GETENV) && !defined(__LCLINT__)
+#if !defined(__LCLINT__)
+#if defined(HAVE___SECURE_GETENV) 
 #define	getenv(_s)	__secure_getenv(_s)
-#endif
-
-#if !defined(__GNUC__) && !defined(__attribute__)
-#define __attribute__(x)
-#endif
-#define UNUSED(x) x __attribute__((__unused__))
+#else
+#if defined(HAVE_SECURE_GETENV) 
+#define	getenv(_s)	secure_getenv(_s)
+#endif /* defined(HAVE_SECURE_GETENV)   */
+#endif /* defined(HAVE___SECURE_GETENV) */
+#endif /* !defined(__LCLINT__)          */
 
 /* Include configmake.h autogenerated from Makefile.am */
-
 #include "configmake.h"
 #include "popt.h"
+
